# b2_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch  urdf.launch
rviz/: urdf.rviz
urdf/: 01-myfirst.urdf  b2.urdf
