<?xml version="1.0"?>
<package format="2">
  <name>b2_description</name>
  <version>0.1.0</version>

  <description>B2 robot description pacakge.</description>
  <author email="sheaffej@gmail.com">John Sheaffer</author>
  <maintainer email="sheaffej@gmail.com">John Sheaffer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
